--- a/_includes/rancher-sidebar-v1.6-zh.html
+++ b/_includes/rancher-sidebar-v1.6-zh.html
@@ -115,7 +115,7 @@
     </li>
     <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/environments/certificates/">证书</a></li>
     <li>
-      <a href="#">Infrastructure Services<i class="pull-right fa fa-angle-down"></i></a>
+      <a href="#">系统服务<i class="pull-right fa fa-angle-down"></i></a>
           <ul>
               <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/rancher-services/">系统基础服务</a></li>
               <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/rancher-services/networking/">网络</a></li>
