--- a/_includes/rancher-sidebar-v1.6-zh.html
+++ b/_includes/rancher-sidebar-v1.6-zh.html
@@ -262,7 +262,7 @@
         </ul>
     </li>
     <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/api/v2-beta/">API文档</a></li>
-    <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/contributing/">Rancher贡献</a></li>
+    <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/contributing/">Rancher社区贡献</a></li>
     <li>
         <a href="#">FAQs<i class="pull-right fa fa-angle-down"></i></a>
         <ul>
