--- a/_includes/rancher-sidebar-v1.6-zh.html
+++ b/_includes/rancher-sidebar-v1.6-zh.html
@@ -119,7 +119,7 @@
           <ul>
               <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/rancher-services/">系统基础服务</a></li>
               <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/rancher-services/networking/">网络</a></li>
-              <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/rancher-services/network-policy/">网络规则</a></li>
+              <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/rancher-services/network-policy/">网络策略</a></li>
               <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/rancher-services/load-balancer">负载均衡</a></li>
               <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/rancher-services/dns-service/">DNS服务</a></li>
               <li><a href="{{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/rancher-services/metadata-service/">Metadata服务</a></li>
